Updated landing page

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -16,7 +16,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #d05e29;
     border-width: 3px;
 }
 
@@ -25,7 +25,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #d05e29;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -46,13 +46,14 @@ h6 {
 }
 
 p {
+    padding-top: 5%;
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.5;
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #d15f29;
 }
 
 .bg-dark {
@@ -66,6 +67,10 @@ p {
 
 section {
     padding: 100px 0;
+}
+
+section#contact {
+  background-color: #dfd6d1;
 }
 
 aside {
@@ -89,7 +94,7 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color: #d05e29;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
@@ -107,12 +112,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #d05e29;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #d05e29!important;
     background-color: transparent;
 }
 
@@ -153,7 +158,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #d05e29;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -168,7 +173,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #d05e29;
     }
 }
 
@@ -323,7 +328,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #d05e29;
 }
 
 .no-gutter > [class*=col-] {
@@ -385,9 +390,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #d15f29;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #d15f29;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -428,12 +433,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #d05e29;
+    background-color: #d05e29;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #d05e29;
     background-color: #fff;
 }
 
