--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Prosper Coach Canada</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,4 +32,3 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
-
