--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -1,11 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
-            <hr>
+            <div id="header-logo"> <%= image_tag "creative/header/PCCLogoSmall.png" %> </div>
             <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Login</a>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Sign Up</a>
         </div>
     </div>
 </header>
-
