--- a/app/views/creatives/_bg_primary.html.erb
+++ b/app/views/creatives/_bg_primary.html.erb
@@ -2,9 +2,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">Calling all financial coaches!</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                <p class="text-faded">
+                  Prosper Coach Canada is the perfect collaborative tool to
+                  connect professional financial coaches across Canada! Whether
+                  you're looking for some new resources to help your community,
+                  or looking for advice from other users, our open forum and
+                  built-in private messaging system can do the trick. 
+                </p>
                 <a href="#" class="btn btn-default btn-xl">Find Out More</a>
             </div>
         </div>
