--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -2,17 +2,21 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">Got Questions? Contact Us!</h2>
                 <hr class="primary">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>Prosper Canada is here to help.</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                <p>123-456-6789</p>
+                <p>Toronto: <a href="tel:+14166652828">416-665-2828</a></p>
+                <p>Toll Free: <a href="tel:+18775681571">1-877-568-1571</a></p>
+                <p>Fax: 416-665-1661</p>
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                <p>60 St. Clair Avenue East, Suite 700</p>
+                <p>Toronto, Ontario</p>
+                <p>M4T 1N5</p>
             </div>
         </div>
     </div>
