--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -2,9 +2,8 @@
     <div class="header-content">
         <div class="header-content-inner">
             <div id="header-logo"> <%= image_tag "creative/header/PCCLogoSmall.png" %> </div>
-            <p>Prosper Coach Canada is the perfect collaborative tool to connect professional financial coaches across Canada!
-              Whether you're looking for some new resources to help your community, or looking for
-              advice from other users, our open forum and built-in private messaging system can do the trick.
+            <p> A forum-based collaborative tool, perfect for sharing documentsm locating new
+              resources and connecting with other financial coaches in Canada.
             </p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Login</a>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Sign Up</a>
