--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,6 @@
  // */
 
 @import 'thredded';
-@import 'bootstrap-sprockets'
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'home';
