--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -50,6 +50,7 @@ p {
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.5;
+    font-family: Helvetica;
 }
 
 .bg-primary {
@@ -439,6 +440,12 @@ fieldset[disabled] .btn-primary.active {
     background-color: #d05e29;
 }
 
+
+div#header-logo {
+    margin-bottom: 30px;
+}
+
+
 .btn-primary .badge {
     color: #d05e29;
     background-color: #fff;
@@ -446,7 +453,6 @@ fieldset[disabled] .btn-primary.active {
 
 .btn {
     border: 0;
-    border-radius: 300px;
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
@@ -480,4 +486,8 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #222;
+}
+
+a.btn.btn-default.btn-xl {
+    margin-top: 25px;
 }
