--- a/app/views/creatives/_bg_primary.html.erb
+++ b/app/views/creatives/_bg_primary.html.erb
@@ -5,13 +5,11 @@
                 <h2 class="section-heading">Calling all financial coaches!</h2>
                 <hr class="light">
                 <p class="text-faded">
-                  Prosper Coach Canada is the perfect collaborative tool to
-                  connect professional financial coaches across Canada! Whether
-                  you're looking for some new resources to help your community,
-                  or looking for advice from other users, our open forum and
-                  built-in private messaging system can do the trick.
+                  Prosper Canada is an organization dedicated to helping
+                  people in financial need. To find out more about who we
+                  are and what we do, check us out on our homepage.
                 </p>
-                <a href="#" class="btn btn-default btn-xl">Find Out More</a>
+                <a href="http://www.prospercanada.org/About-Us/Overview.aspx" target="_blank" class="btn btn-default btn-xl">Find Out More</a>
             </div>
         </div>
     </div>
