Updated copy again

--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -4,7 +4,10 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Got Questions? Contact Us!</h2>
                 <hr class="primary">
-                <p>Prosper Canada is here to help.</p>
+                <p>Prosper Canada is here to help. If you have any questions
+                about our Prosper Coach collaborative tool, contact us and let's work
+                together to make our communities a better place.</p>
+              </br>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x wow bounceIn"></i>
