--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -23,6 +23,13 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+
+                <!-- Show dashboard if user is logged in -->
+                <% if user_signed_in? %>
+                <li>
+                  <a href="<%= thredded_path %>" class="page-scroll">My Dashboard</a>
+                </li>
+                <% end %>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
