Fixed the signup page

--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -8,8 +8,8 @@
             or looking for advice from other users, our open forum and
             built-in private messaging system can do the trick.
             </p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Login</a>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Sign Up</a>
+            <a href="<%= new_user_session_path %>" class="btn btn-primary btn-xl page-scroll">Login</a>
+            <a href="<%= new_user_registration_path %>" class="btn btn-primary btn-xl page-scroll">Sign Up</a>
         </div>
     </div>
 </header>
