--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -1,4 +1,8 @@
 <header>
+  <div class="flash-notice" style="padding-top: 15px">
+    <div class="flash.thredded--flash-message.thredded--flash-message--notice" style="color:orange; font-family: helvetica"><%= render 'thredded/shared/flash_messages' %></div>
+  </div>
+
     <div class="header-content">
         <div class="header-content-inner">
             <div id="header-logo"> <%= image_tag "creative/header/PCCLogoSmall.png" %> </div>
