--- a/app/views/thredded/shared/_currently_online.html.erb
+++ b/app/views/thredded/shared/_currently_online.html.erb
@@ -7,7 +7,8 @@
     <ul class="thredded--currently-online--users">
       <% users.each do |user| %>
         <li class="thredded--currently-online--user">
-          <img class="thredded--currently-online--avatar" src="<%= Thredded.avatar_url.call(user) %>" alt=""/>
+          <img class="thredded--currently-online--avatar" src="
+          <%= current_user.avatar.url %>" alt=""/>
           <%= user.thredded_display_name %>
         </li>
       <% end %>
