--- a/app/assets/stylesheets/creative/creative.scss
+++ b/app/assets/stylesheets/creative/creative.scss
@@ -491,3 +491,6 @@ body {
 a.btn.btn-default.btn-xl {
     margin-top: 25px;
 }
+a.btn.btn-primary.btn-xl.page-scroll {
+    box-shadow: -1px 2px 18px #888888;
+}
