--- a/app/views/devise/registrations/_usernavbar.html.erb
+++ b/app/views/devise/registrations/_usernavbar.html.erb
@@ -8,23 +8,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Prosper Coach Canada</a>
+            <a class="navbar-brand page-scroll" href="<%= root_path %>">Prosper Coach Canada</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="page-scroll" href="#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#services">Features</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
+        <div class="navbar-right">
+           <ul class="nav-right">
+             <a href="<%= thredded_path %>" class="navbar-brand page-scroll">My Dashboard</a>
+           </ul>
+       </div>
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
