Styling the user profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,19 @@
                                       current_user: current_user) } %>
 
 <%= render partial: 'users/sessions/usernavbar' %>
+<div class="container">
+  <section>
+    <div class="profile-pic">
+
+    </div>
+    <div class="profile-content">
+
+    </div>
+  </section>
+  <section>
+    <span id=""></span>
+    <span id=""></span>
+    <span id=""></span>
+    <span id=""></span>
+  </section>
+</div>
