Deleted drop shadow on the logo

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -2,11 +2,11 @@
   background-color: rgb(228, 221, 220);
   width: 1200px;
   height: auto;
-  padding: 10px 20px;
+  padding: 10px 10px;
 
   .profile-pic {
     border-radius: 80px;
-    background-color: rgb(180, 189, 178);
+    background-color: white;
     width: 150px;
     height: 150px;
   }
