--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -154,7 +154,7 @@ input[type="submit"] {
   color: white;
 }
 
-// drop shadow for company text
-a.navbar-brand.page-scroll {
-    box-shadow: 4px 3px 20px #888888;
-}
+// // drop shadow for company text
+// a.navbar-brand.page-scroll {
+//     box-shadow: 4px 3px 20px #888888;
+// }
