Added Link to Edit User

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,14 @@
 <%= render partial: 'users/sessions/usernavbar' %>
 
 <div class="container">
-  <div class="navbar-right">
-           <ul class="nav-right">
-             <a href="<%= thredded_path %>" class="navbar-brand page-scroll">My Dashboard</a>
+  <div class="">
+           <ul class="">
+             <a href="<%= thredded_path %>" class="navbar-brand page-scroll">Dashboard</a>
+           </ul>
+       </div>
+  <div class="">
+           <ul class="">
+             <a href="<%= edit_user_registration_path %>" class="navbar-brand page-scroll">Edit User</a>
            </ul>
        </div>
   <section>
