--- a/app/views/thredded/messageboards/index.html.erb
+++ b/app/views/thredded/messageboards/index.html.erb
@@ -13,7 +13,7 @@
     <!-- This is a test -->
     <div class="row">
       <div class="col-md-8 col-sm-6">
-        <%= render '../categories/category' %>
+        <%# render partial: 'thredded/categories/category' %>
       </div>
     </div>
     <!-- This is the end of the test -->
