styled the user profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,18 +4,25 @@
 
 <%= render partial: 'users/sessions/usernavbar' %>
 <div class="container">
-  <section>
-    <div class="profile-pic">
+  <br>
+  <div class="row">
+    <div class="col-sm-4 profile-pic"></div>
 
+    <div class="col-sm-8 profile-content">
+      <p id="paragraph-profile">
+        <h3>Human User</h3>
+        Hi, I’m Human. I’ve been a councellor for 15 years, and I love it.<br>
+        <strong>Location:</strong> Toronto, Canada <br>
+        <strong>Website:</strong> www.councellor.com
+      </p>
     </div>
-    <div class="profile-content">
+  </div>
 
-    </div>
-  </section>
-  <section>
-    <span id=""></span>
-    <span id=""></span>
-    <span id=""></span>
-    <span id=""></span>
-  </section>
+  <div class="profile-lower row">
+    <div class="col-sm-6 left-top"></div>
+    <div class="col-sm-6 right-top"></div>
+    <div class="col-sm-6 left-bottom"></div>
+    <div class="col-sm-6 right-bottom"></div>
+  </div>
+
 </div>
