--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -1,17 +1,54 @@
 .container {
   background-color: rgb(228, 221, 220);
-  width: 1200px;
+  width: 80%;
   height: auto;
   padding: 10px 10px;
+  box-shadow: -1px 2px 5px #888888;
+}
+.col-sm-4.profile-pic {
+  border-radius: 50%;
+  width: 170px;
+  height: 170px;
+  background: white;
+  margin-left: 30px;
+}
+h3 {
+  text-align: left;
+}
 
-  .profile-pic {
-    border-radius: 80px;
-    background-color: white;
-    width: 150px;
-    height: 150px;
-  }
+.col-sm-8.profile-content {
+  text-align: left;
+}
 
-  .profile-content {
-
-  }
+.col-sm-6.left-top {
+    background-color: #ee592b;
+    width: 250px;
+    height: 60px;
+    margin-left: 30px;
+    margin-top: 50px;
+    border-radius: 10px;
+}
+.col-sm-6.right-top {
+    background-color: #ee592b;
+    width: 250px;
+    height: 60px;
+    margin-left: 40px;
+    margin-top: 50px;
+    border-radius: 10px;
+}
+.col-sm-6.left-bottom {
+    background-color: #ee592b;
+    width: 250px;
+    height: 60px;
+    margin-left: 30px;
+    margin-top: 30px;
+    border-radius: 10px;
+}
+.col-sm-6.right-bottom {
+    background-color: #ee592b;
+    width: 250px;
+    height: 60px;
+    margin-left: 40px;
+    margin-top: 30px;
+    border-radius: 10px;
 }
