--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -1,54 +1,174 @@
+// .container {
+//   background-color: rgb(228, 221, 220);
+//   width: 80%;
+//   height: auto;
+//   padding: 10px 10px;
+//   box-shadow: -1px 2px 5px #888888;
+// }
+// .col-sm-4.profile-pic {
+//   border-radius: 50%;
+//   width: 170px;
+//   height: 170px;
+//   background: white;
+//   margin-left: 30px;
+// }
+// h3 {
+//   text-align: left;
+// }
+//
+// .col-sm-8.profile-content {
+//   text-align: left;
+// }
+//
+// .col-sm-6.left-top {
+//     background-color: #ee592b;
+//     width: 250px;
+//     height: 60px;
+//     margin-left: 30px;
+//     margin-top: 50px;
+//     border-radius: 10px;
+// }
+// .col-sm-6.right-top {
+//     background-color: #ee592b;
+//     width: 250px;
+//     height: 60px;
+//     margin-left: 40px;
+//     margin-top: 50px;
+//     border-radius: 10px;
+// }
+// .col-sm-6.left-bottom {
+//     background-color: #ee592b;
+//     width: 250px;
+//     height: 60px;
+//     margin-left: 30px;
+//     margin-top: 30px;
+//     border-radius: 10px;
+// }
+// .col-sm-6.right-bottom {
+//     background-color: #ee592b;
+//     width: 250px;
+//     height: 60px;
+//     margin-left: 40px;
+//     margin-top: 30px;
+//     border-radius: 10px;
+// }
+
+body {
+  background: #F1F3FA;
+}
+
+/* Profile container */
+.profile {
+  margin: 20px 0;
+}
+
+/* Profile sidebar */
+.profile-sidebar {
+  padding: 20px 0 10px 0;
+  background: #fff;
+}
+
+.profile-userpic img {
+  float: none;
+  margin: 0 auto;
+  width: 50%;
+  height: 50%;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 50% !important;
+}
+
+.profile-usertitle {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.profile-usertitle-name {
+  color: #5a7391;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+
+.profile-usertitle-job {
+  text-transform: uppercase;
+  color: #5b9bd1;
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.profile-userbuttons {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.profile-userbuttons .btn {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  padding: 6px 15px;
+  margin-right: 0px;
+}
+
+.profile-userbuttons .btn:last-child {
+  margin-right: 0px;
+}
+
+.profile-usermenu {
+  margin-top: 30px;
+}
+
+.profile-usermenu ul li {
+  border-bottom: 1px solid #f0f4f7;
+}
+
+.profile-usermenu ul li:last-child {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li a {
+  color: #93a3b5;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.profile-usermenu ul li a i {
+  margin-right: 8px;
+  font-size: 14px;
+}
+
+.profile-usermenu ul li a:hover {
+  background-color: #fafcfd;
+  color: #5b9bd1;
+}
+
+.profile-usermenu ul li.active {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li.active a {
+  color: #5b9bd1;
+  background-color: #f6f9fb;
+  border-left: 2px solid #5b9bd1;
+  margin-left: -2px;
+}
+
+/* Profile Content */
+.profile-content {
+  padding: 20px;
+  background: #fff;
+  min-height: 460px;
+}
+
 .container {
-  background-color: rgb(228, 221, 220);
-  width: 80%;
-  height: auto;
-  padding: 10px 10px;
-  box-shadow: -1px 2px 5px #888888;
+    max-width: 1200px;
 }
-.col-sm-4.profile-pic {
-  border-radius: 50%;
-  width: 170px;
-  height: 170px;
-  background: white;
-  margin-left: 30px;
+button.btn.btn-success.btn-sm {
+    background-color: #3bb8e8;
+    border-color: #3bb8e8;
 }
-h3 {
-  text-align: left;
-}
-
-.col-sm-8.profile-content {
-  text-align: left;
-}
-
-.col-sm-6.left-top {
-    background-color: #ee592b;
-    width: 250px;
-    height: 60px;
-    margin-left: 30px;
-    margin-top: 50px;
-    border-radius: 10px;
-}
-.col-sm-6.right-top {
-    background-color: #ee592b;
-    width: 250px;
-    height: 60px;
-    margin-left: 40px;
-    margin-top: 50px;
-    border-radius: 10px;
-}
-.col-sm-6.left-bottom {
-    background-color: #ee592b;
-    width: 250px;
-    height: 60px;
-    margin-left: 30px;
-    margin-top: 30px;
-    border-radius: 10px;
-}
-.col-sm-6.right-bottom {
-    background-color: #ee592b;
-    width: 250px;
-    height: 60px;
-    margin-left: 40px;
-    margin-top: 30px;
-    border-radius: 10px;
+button.btn.btn-danger.btn-sm {
+    background-color: #3bb8e8;
+    border-color: #3bb8e8;
 }
