--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,26 +3,67 @@
                                       current_user: current_user) } %>
 
 <%= render partial: 'users/sessions/usernavbar' %>
-<div class="container">
-  <br>
-  <div class="row">
-    <div class="col-sm-4 profile-pic"></div>
 
-    <div class="col-sm-8 profile-content">
-      <p id="paragraph-profile">
-        <h3>Human User</h3>
-        Hi, I’m Human. I’ve been a councellor for 15 years, and I love it.<br>
-        <strong>Location:</strong> Toronto, Canada <br>
-        <strong>Website:</strong> www.councellor.com
-      </p>
+
+<!-- Bootstrap -->
+
+<div class="container">
+    <div class="row profile">
+    <div class="col-md-3">
+      <div class="profile-sidebar">
+        <!-- SIDEBAR USERPIC -->
+        <div class="profile-userpic">
+          <img src="http://keenthemes.com/preview/metronic/theme/assets/admin/pages/media/profile/profile_user.jpg" class="img-responsive" alt="">
+        </div>
+        <!-- END SIDEBAR USERPIC -->
+        <!-- SIDEBAR USER TITLE -->
+        <div class="profile-usertitle">
+          <div class="profile-usertitle-name">
+            Marcus Doe
+          </div>
+          <div class="profile-usertitle-job">
+            Developer
+          </div>
+        </div>
+        <!-- END SIDEBAR USER TITLE -->
+        <!-- SIDEBAR BUTTONS -->
+        <div class="profile-userbuttons">
+          <button type="button" class="btn btn-success btn-sm">Follow</button>
+          <button type="button" class="btn btn-danger btn-sm">Message</button>
+        </div>
+        <!-- END SIDEBAR BUTTONS -->
+        <!-- SIDEBAR MENU -->
+        <div class="profile-usermenu">
+          <ul class="nav">
+            <li class="active">
+              <a href="#">
+              <i class="glyphicon glyphicon-home"></i>
+              Overview </a>
+            </li>
+            <li>
+              <a href="#">
+              <i class="glyphicon glyphicon-user"></i>
+              Account Settings </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+              <i class="glyphicon glyphicon-ok"></i>
+              Tasks </a>
+            </li>
+            <li>
+              <a href="#">
+              <i class="glyphicon glyphicon-flag"></i>
+              Help </a>
+            </li>
+          </ul>
+        </div>
+        <!-- END MENU -->
+      </div>
+    </div>
+    <div class="col-md-9">
+            <div class="profile-content">
+         Some user related content goes here...
+            </div>
     </div>
   </div>
-
-  <div class="profile-lower row">
-    <div class="col-sm-6 left-top"></div>
-    <div class="col-sm-6 right-top"></div>
-    <div class="col-sm-6 left-bottom"></div>
-    <div class="col-sm-6 right-bottom"></div>
-  </div>
-
 </div>
