--- a/app/views/thredded/shared/_nav.html.erb
+++ b/app/views/thredded/shared/_nav.html.erb
@@ -1,10 +1,6 @@
 <nav class="thredded--navigation" role="navigation">
   <ul class="thredded--user-navigation<%= ' thredded--user-navigation-standalone' if Thredded.standalone_layout? %>">
-    <% if signed_in? && Thredded.standalone_layout? %>
-      <li class="thredded--user-navigation--profile thredded--user-navigation--item">
-        <%= link_to thredded_current_user.thredded_display_name, user_path(thredded_current_user) %>
-      </li>
-    <% end %>
+
 
     <%= render 'thredded/shared/nav/moderation' %>
     <%= render 'thredded/shared/nav/notification_preferences', messageboard: messageboard_or_nil %>
@@ -12,6 +8,12 @@
 
     <% if Thredded.standalone_layout? %>
       <%= render 'thredded/shared/nav/standalone' %>
+    <% end %>
+
+    <% if signed_in? && Thredded.standalone_layout? %>
+      <li class="thredded--user-navigation--profile thredded--user-navigation--item">
+        <%= link_to "My Profile", user_path(thredded_current_user) %>
+      </li>
     <% end %>
   </ul>
   <% if content_for? :thredded_main_navigation %>
