--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,52 +1,55 @@
+<%= render partial: 'users/sessions/usernavbar' %>
+
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="edit-user-form">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="field">
+      <%= f.email_field :email, placeholder: 'email', autofocus: true %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+    <div class="field">
+      <%= f.text_field :location, placeholder: 'location', autofocus: true %>
+    </div>
+
+    <div class="field">
+      <%= f.telephone_field :phone_number, placeholder: '416 123 456', autofocus: true %>
+    </div>
+
+
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <!-- <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br /> -->
+      <%= f.password_field :password, placeholder: 'new password (min 6 characters)', autocomplete: "off" %>
+      <!-- <% if @minimum_password_length %>
+        <br />
+        <em><%= @minimum_password_length %> characters minimum</em>
+      <% end %> -->
+    </div>
 
-  <% if current_user.avatar.url.present? %>
-    <%= image_tag(current_user.avatar.url) %>
-    <%= f.label :remove_avatar do %>
-      <%= f.check_box :remove_avatar %>
-    <% end %>
+    <div class="field">
+      <%= f.password_field :password_confirmation, placeholder: 'confirm new password', autocomplete: "off" %>
+    </div>
+
+
+    <div class="field">
+      <!-- <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br /> -->
+      <%= f.password_field :current_password, placeholder: 'current password', autocomplete: "off" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Update" %>
+    </div>
   <% end %>
-  <%= f.file_field :avatar %>
-  <%= f.hidden_field :avatar_cache %>
+</div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<div class="cancel">
+  <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+</div>
