--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -206,3 +206,28 @@ div#flash.thredded--flash-message.thredded--flash-message--notice {
     color: orange !important;
     font-family: helvetica !important;
 }
+
+.user-btn {
+  background-color: #3bb8e8;
+  color: white;
+  font-family: helvetica;
+  font-size: 4rem;
+  padding: 10px 15px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+#btn-1 {
+    padding-left: 64px;
+    padding-right: 64px;
+}
+
+#btn-3 {
+  padding-left: 49px;
+  padding-right: 49px;
+}
+
+#btn-4 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
