--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,9 +43,9 @@
               Overview </a>
             </li>
             <li>
-              <a href="#">
+              <a href="edit">
               <i class="glyphicon glyphicon-user"></i>
-              Account Settings </a>
+              Edit Account </a>
             </li>
             <li>
               <a href="#" target="_blank">
@@ -63,9 +63,26 @@
       </div>
     </div>
     <div class="col-md-9">
-            <div class="profile-content">
-         Some user related content goes here...
-            </div>
+
+      <div>
+        <button type="button" class="user-btn" id="btn-1">My Favourite Posts</button>
+      </div>
+
+
+      <div>
+        <button type="button" class="user-btn" id="btn-2">Questions I've Answered</button>
+      </div>
+
+
+      <div>
+        <button type="button" class="user-btn" id="btn-3">Questions I've Asked</button>
+      </div>
+
+
+      <div>
+        <button type="button" class="user-btn" id="btn-4">My Favourite Resources</button>
+      </div>
+
     </div>
   </div>
 </div>
