--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= Thredded::ApplicationController.render partial: 'thredded/users/posts', locals: {
+<%# Thredded::ApplicationController.render partial: 'thredded/users/posts', locals: {
       posts: Thredded.posts_page_view(scope: @user.thredded_posts.order_newest_first.limit(5),
                                       current_user: current_user) } %>
 
