--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -23,6 +23,10 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li>
+                  <a class="page-scroll" href="#top">Login/Sign Up</a>                  
+                </li>
+
 
                 <!-- Show dashboard if user is logged in -->
                 <% if user_signed_in? %>
