--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,8 @@
-<<<<<<< HEAD
-
-<%= render partial: 'users/sessions/usernavbar' %>
-
-=======
 <%# Thredded::ApplicationController.render partial: 'thredded/users/posts', locals: {
       posts: Thredded.posts_page_view(scope: @user.thredded_posts.order_newest_first.limit(5),
                                       current_user: current_user) } %>
 
 <%= render partial: 'devise/registrations/usernavbar' %>
->>>>>>> 58ca63c6e7a2e09e2849133b30d2e30ad90e28ae
-
 
 <!-- Bootstrap -->
 
@@ -25,25 +18,19 @@
           </a>
         </div>
 
-        <%= form_for @user, html: { multipart: true } do |f| %>
+        <!-- <%# form_for @user, html: { multipart: true } do |f| %>
           <p>
             <label>My Avatar</label>
-            <%= image_tag(@user.avatar_url) if @user.avatar? %>
-            <%= f.file_field :avatar %>
-            <%= f.hidden_field :avatar_cache %>
+            <%# image_tag(@user.avatar_url) if @user.avatar? %>
+            <%# f.file_field :avatar %>
+            <%# f.hidden_field :avatar_cache %>
           </p>
-        <% end %>
+        <% end %> -->
 
         <!-- END SIDEBAR USERPIC -->
         <!-- SIDEBAR USER TITLE -->
         <div class="profile-usertitle">
           <div class="profile-usertitle-name">
-<<<<<<< HEAD
-            <%= user.thredded_display_name %>
-          </div>
-          <div class="profile-usertitle-job">
-            <%= current_user.title %>
-=======
             <%= @user.name %>
           </div>
           <div class="profile-usertitle-job">
@@ -51,7 +38,6 @@
           </div>
           <div class="profile-usertitle-location">
             <%= @user.location %>
->>>>>>> 58ca63c6e7a2e09e2849133b30d2e30ad90e28ae
           </div>
         </div>
         <!-- END SIDEBAR USER TITLE -->
@@ -90,23 +76,6 @@
       </div>
     </div>
     <div class="col-md-9">
-<<<<<<< HEAD
-            <div class="profile-content">
-                <%= Thredded::ApplicationController.render partial: 'thredded/users/posts', locals: {
-                      posts: Thredded.posts_page_view(scope: @user.thredded_posts.order_newest_first.limit(5),
-                                                      current_user: current_user) } %>
-            </div>
-    </div>
-
-  </section>
-  <section>
-    <span id=""></span>
-    <span id=""></span>
-    <span id=""></span>
-    <span id=""></span>
-  </section>
-=======
-
       <div>
         <button type="button" class="user-btn" id="btn-1">My Favourite Posts</button>
       </div>
@@ -127,5 +96,4 @@
 
     </div>
   </div>
->>>>>>> 58ca63c6e7a2e09e2849133b30d2e30ad90e28ae
 </div>
