--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
             <%# f.file_field :avatar %>
             <%# f.hidden_field :avatar_cache %>
           </p>
-        <% end %> -->
+        <%# end %> -->
 
         <!-- END SIDEBAR USERPIC -->
         <!-- SIDEBAR USER TITLE -->
