--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -24,7 +24,7 @@
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="#top">Login/Sign Up</a>                  
+                  <a class="page-scroll" href="<%= new_user_session_path %>">Login/Sign Up</a>
                 </li>
 
 
